# content-aggregator

./: .commitlintrc.json  .dockerignore  .env  .eslintrc.json  .gitpod.yml  .lintstagedrc.json  .prettierrc  Pipfile  README.md  docker-compose.db.yml  docker-compose.yml  nest-cli.json  next.config.mjs  nx.json  package-lock.json  package.json  requirements.txt  spec.yaml  tsconfig.base.json  tsconfig.build.json  tsconfig.json  workspace.json
.github/workflows/: containerize.yaml
aggregator/: settings.py
apps/services/url-shortener-svc/: .env.example  .gitignore  README.md  docker-compose.dev.yml  pyproject.toml
apps/services/url-shortener-svc/src/: main.py
apps/services/url-shortener-svc/src/config/: __init__.py
apps/services/url-shortener-svc/src/database/: config.py  crud.py  models.py
apps/services/url-shortener-svc/src/dependencies/: fetch_urls.py  get_db.py  keygen.py  responses.py
apps/services/url-shortener-svc/src/routes/: admin.py  url.py
apps/services/url-shortner-svc/: project.json  pyproject.toml
docs/design/: content-aggregator.drawio  ~$content-aggregator.drawio.bkp
podcasts/: admin.py  apps.py  views.py
podcasts/migrations/: 0001_initial.py
prisma/: schema.prisma
scripts/: clean.ts  customSeed.ts  seed.ts  start
src/: app.module.ts  constants.ts  errors.ts  grants.json  main.ts  prisma.util.spec.ts  prisma.util.ts  serveStaticOptions.service.ts  swagger.ts  types.ts
src/auth/: Credentials.ts  IAuthStrategy.ts  ITokenService.ts  LoginArgs.ts  UserInfo.ts  abac.util.ts  acl.module.ts  (+14 more)
templates/: homepage.html  navbar.html
(+142 files in other folders)
