[tool.poetry]
name = "url-shortener-svc"
version = "0.1.0"
description = "URL shortener microservice"
authors = ["endalk200 <eb808826@gmail.com>"]
readme = "README.md"
packages = [{include = "url_shortener_svc"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}
SQLAlchemy = "^1.4.41"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.3"
validators = "^0.20.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
black = "^22.8.0"
pytest = "^7.1.3"
pydantic = "^1.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
