[tool.poetry]
name = "url-shortner-svc"
version = "0.1.0"
description = "URL shortner microservice using FastAPI"
authors = ["Endalkachew <eb808826@gmail.com>"]
readme = "README.md"
packages = [{include = "url_shortner_svc"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}


[tool.poetry.group.dev.dependencies]
python-dotenv = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
